remove V2, fluckering isssue, calendar issues, 2fa field space, theme at login, etc

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -315,7 +315,7 @@
 		"READ_SALE_AGREEMENT": "阅读销售协议",
 		"aimedisToken_SOCIAL_NETWORK": "社交网络",
 		"The_medical_social": "AIMsocial医疗社交网络",
-		"With_Aimedis_launch_AIMsocial": "通过Aimedis V2，我们推出了AIMsocial，这是第一个分散和激励的社交医疗网络。 AIMsocial彻底改变了患者沟通和支持他们健康和福祉的方式。 随着AIM数字资产的发布，患者和护理人员将有可能因为他们的努力和在网络内部工作而获得报酬，因为我们相信帮助他人必须受到激励。",
+		"With_Aimedis_launch_AIMsocial": "通过Aimedis，我们推出了AIMsocial，这是第一个分散和激励的社交医疗网络。 AIMsocial彻底改变了患者沟通和支持他们健康和福祉的方式。 随着AIM数字资产的发布，患者和护理人员将有可能因为他们的努力和在网络内部工作而获得报酬，因为我们相信帮助他人必须受到激励。",
 		"CONTACT_US_FOR_MORE": "联系我们获取更多信息",
 		"covid_page_content": "covid页面内容",
 		"covid_STRONGER_TOGETHER": "一起强大",
