--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -315,7 +315,7 @@
 		"READ_SALE_AGREEMENT": "KAUFVERTRAG LESEN",
 		"aimedisToken_SOCIAL_NETWORK": "SOZIALES NETZWERK",
 		"The_medical_social": "Das AIMsocial medizinische soziale Netzwerk",
-		"With_Aimedis_launch_AIMsocial": "Mit Aimedis V2 starten wir AIMsocial, das erste dezentrale und motivierte sozialmedizinische Netzwerk. AIMsocial revolutioniert die Art und Weise, wie Patienten kommunizieren und ihren Weg zu Gesundheit und Wohlbefinden unterstützen. Mit der Veröffentlichung des digitalen AIM-Assets erhalten Patienten und Gesundheitsdienstleister die Möglichkeit, für ihre Bemühungen und ihre Arbeit innerhalb des Netzwerks bezahlt zu werden.",
+		"With_Aimedis_launch_AIMsocial": "Mit Aimedis starten wir AIMsocial, das erste dezentrale und motivierte sozialmedizinische Netzwerk. AIMsocial revolutioniert die Art und Weise, wie Patienten kommunizieren und ihren Weg zu Gesundheit und Wohlbefinden unterstützen. Mit der Veröffentlichung des digitalen AIM-Assets erhalten Patienten und Gesundheitsdienstleister die Möglichkeit, für ihre Bemühungen und ihre Arbeit innerhalb des Netzwerks bezahlt zu werden.",
 		"CONTACT_US_FOR_MORE": "NEHMEN SIE KONTAKT AUF UM MEHR ZU ERFAHREN",
 		"covid_page_content": "covid page content",
 		"covid_STRONGER_TOGETHER": "ZUSAMMEN STÄRKER",
