--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -319,7 +319,7 @@
 		"READ_SALE_AGREEMENT": "READ SALE AGREEMENT",
 		"AIMEDISTOKEN_SOCIAL_NETWORK": "SOCIAL NETWORK",
 		"The_medical_social": "The AIMsocial medical social network",
-		"With_Aimedis_launch_AIMsocial": "With Aimedis V2 we launch AIMsocial, the first decentralized and incentiviced social medical network. AIMsocial revolutionizes the way patients communicate and support their way to healthyness and well-being. With the release the AIM digital asset will give patients and caregivers the possibility to get paid for their efforts and work inside the network, because we believe that helping others must be incentivised.",
+		"With_Aimedis_launch_AIMsocial": "With Aimedis we launch AIMsocial, the first decentralized and incentiviced social medical network. AIMsocial revolutionizes the way patients communicate and support their way to healthyness and well-being. With the release the AIM digital asset will give patients and caregivers the possibility to get paid for their efforts and work inside the network, because we believe that helping others must be incentivised.",
 		"CONTACT_US_FOR_MORE": "CONTACT US FOR MORE",
 		"covid_page_content": "covid page content",
 		"covid_STRONGER_TOGETHER": "STRONGER TOGETHER",
