--- a/src/translations/enBkup.json
+++ b/src/translations/enBkup.json
@@ -171,7 +171,7 @@
 		"this_is_aim_digital": "This is the AIM digital asset sale agreement, including restricted countries and a disclaimer.",
 		"read_sale_agreement": "Read Sale Agreement",
 		"aim_social_network": "The AIMsocial medical social network",
-		"with_aimedis": "With Aimedis V2 we launch AIMsocial, the first decentralized and incentiviced social medical network. AIMsocial revolutionizes the way patients communicate and support their way to healthyness and well-being. With the release the AIM digital asset will give patients and caregivers the possibility to get paid for their efforts and work inside the network, because we believe that helping others must be incentivized.",
+		"with_aimedis": "With Aimedis we launch AIMsocial, the first decentralized and incentiviced social medical network. AIMsocial revolutionizes the way patients communicate and support their way to healthyness and well-being. With the release the AIM digital asset will give patients and caregivers the possibility to get paid for their efforts and work inside the network, because we believe that helping others must be incentivized.",
 
 		"support_ticket": "support ticket",
 		"Contact_Support_Message": "Contact and Support Message",
