--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -320,7 +320,7 @@
 		"READ_SALE_AGREEMENT": "READ SALE AGREEMENT",
 		"AIMEDISTOKEN_SOCIAL_NETWORK": "SOCIAL NETWORK",
 		"The_medical_social": "The AIMsocial medical social network",
-		"With_Aimedis_launch_AIMsocial": "With Aimedis V2 we launch AIMsocial, the first decentralized and incentiviced social medical network. AIMsocial revolutionizes the way patients communicate and support their way to healthyness and well-being. With the release the AIM digital asset will give patients and caregivers the possibility to get paid for their efforts and work inside the network, because we believe that helping others must be incentivised.",
+		"With_Aimedis_launch_AIMsocial": "With Aimedis we launch AIMsocial, the first decentralized and incentiviced social medical network. AIMsocial revolutionizes the way patients communicate and support their way to healthyness and well-being. With the release the AIM digital asset will give patients and caregivers the possibility to get paid for their efforts and work inside the network, because we believe that helping others must be incentivised.",
 		"CONTACT_US_FOR_MORE": "CONTACT US FOR MORE",
 		"covid_page_content": "covid page content",
 		"covid_STRONGER_TOGETHER": "STRONGER TOGETHER",
@@ -632,7 +632,7 @@
 		"link_LinkedIn_profile": "link to LinkedIn profile (if there is one)",
 		"to_email_address": "to email address",
 		"Login_content": "Login_content",
-		"Log_into_Aimedis": "Log in to Aimedis V2",
+		"Log_into_Aimedis": "Log in to Aimedis",
 		"login_Email_address": "E-mail address",
 		"login_Password": "Password",
 		"login_Forgotpassword": "Forgot password?",
@@ -640,7 +640,7 @@
 		"login_an_account": "don't have an account?",
 		"login_Registerhere": "Register here",
 		"reg_content": "reg_content",
-		"Register_for_Aimedis": "Register for Aimedis V2",
+		"Register_for_Aimedis": "Register for Aimedis",
 		"Register_Name": "Name",
 		"Register_email": "E-mail address",
 		"Register_Password": "Password",
