--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -209,7 +209,7 @@
 		"Review_on": "Beoordeeld op",
 		"Enter_ICD_code": "Voer ICD code in",
 		"lifelong": "levenslang",
-		"Log_in_for_Aimedis_V2": "Log in voor Aimedis V2",
+		"Log_in_for_Aimedis_V2": "Log in voor Aimedis",
 		"Login_with_your_email_address": "Log in met uw emailadres",
 		"click_term_conditions": "Door dit aan te vinken gaat u akkoord met onze gebruiksvoorwaarden en accepteert u het verzamelen en verwerken van uw gegevens en het gebruik van uw persoonlijke gegevens. Hierover staat meer in onze privacy policy.",
 		"If_you_are_not_registered_please": "Als u nog niet geregistreerd bent",
