--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -315,7 +315,7 @@
 		"READ_SALE_AGREEMENT": "LER ACORDO DE VENDA",
 		"aimedisToken_SOCIAL_NETWORK": "REDE SOCIAL",
 		"The_medical_social": "A rede social médica AIMsocial",
-		"With_Aimedis_launch_AIMsocial": "Com o Aimedis V2, lançamos o AIMsocial, a primeira rede social médica descentralizada e incentivada. AIMsocial revoluciona a maneira como os pacientes se comunicam e apoiam o seu caminho para a saúde e bem-estar. Com o lançamento, o ativo digital da AIM oferecerá aos pacientes e profissionais de saúde a capacidade de serem pagos por seus esforços e trabalharem dentro da rede, porque acreditamos que ajudar os outros deve ser incentivado.",
+		"With_Aimedis_launch_AIMsocial": "Com o Aimedis, lançamos o AIMsocial, a primeira rede social médica descentralizada e incentivada. AIMsocial revoluciona a maneira como os pacientes se comunicam e apoiam o seu caminho para a saúde e bem-estar. Com o lançamento, o ativo digital da AIM oferecerá aos pacientes e profissionais de saúde a capacidade de serem pagos por seus esforços e trabalharem dentro da rede, porque acreditamos que ajudar os outros deve ser incentivado.",
 		"CONTACT_US_FOR_MORE": "Contate-Nos PARA MAIS",
 		"covid_page_content": "Página de conteúdo Covid",
 		"covid_STRONGER_TOGETHER": "MAIS FORTES JUNTOS",
