--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -209,7 +209,7 @@
     "Review_on": "Дата оценки",
     "Enter_ICD_code": "Введите код МКБ",
     "lifelong": "Пожизненно",
-    "Log_in_for_Aimedis_V2": "Войти в Aimedis V2",
+    "Log_in_for_Aimedis_V2": "Войти в Aimedis",
     "Login_with_your_email_address": "Войти в систему с вашим адресом электронной почты",
     "click_term_conditions": "Выбирая данный пункт, я соглашаюсь с условиями использования и даю согласие на сбор, обработку и использование моих персональных данных. Подробная информация представлена в нашей политике конфиденциальности.",
     "If_you_are_not_registered_please": "Если вы еще не зарегистрированы, пожалуйста,",
