--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -209,7 +209,7 @@
 		"Review_on": "Revisado en",
 		"Enter_ICD_code": "Ingrese el código ICD",
 		"lifelong": "vitalicio",
-		"Log_in_for_Aimedis_V2": "Inicie sesión en Aimedis V2",
+		"Log_in_for_Aimedis_V2": "Inicie sesión en Aimedis",
 		"Login_with_your_email_address": "Inicie sesión con su dirección de correo electrónico",
 		"click_term_conditions": "Al hacer clic en el cuadro, acepto los términos y condiciones y acepto la recopilación y el procesamiento y uso de mis datos personales. Encuentre más en nuestra política de privacidad.",
 		"If_you_are_not_registered_please": "Si aún no está registrado, por favor",
