--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -166,7 +166,7 @@
 		"this_is_aim_digital": "Hii ni LENGO digital mali ya kuuza mkataba, ikiwa ni pamoja na vikwazo ya nchi na disclaimer.",
 		"read_sale_agreement": "Soma Mkataba wa Mauzo",
 		"aim_social_network": "Ya AIMsocial matibabu mtandao wa kijamii",
-		"with_aimedis": "Na Aimedis V2 sisi uzinduzi AIMsocial, kwanza madaraka na incentiviced kijamii matibabu mtandao. AIMsocial revolutionizes njia wagonjwa kuwasiliana na msaada kwa njia yao kwa healthyness na ustawi. Na kutolewa LENGO digital mali kutoa wagonjwa na walezi uwezekano wa kupata malipo kwa ajili ya juhudi zao na kazi ndani ya mtandao, kwa sababu tunaamini kwamba kuwasaidia wengine lazima incentivized.",
+		"with_aimedis": "Na Aimedis sisi uzinduzi AIMsocial, kwanza madaraka na incentiviced kijamii matibabu mtandao. AIMsocial revolutionizes njia wagonjwa kuwasiliana na msaada kwa njia yao kwa healthyness na ustawi. Na kutolewa LENGO digital mali kutoa wagonjwa na walezi uwezekano wa kupata malipo kwa ajili ya juhudi zao na kazi ndani ya mtandao, kwa sababu tunaamini kwamba kuwasaidia wengine lazima incentivized.",
 		"support_ticket": "tiketi ya msaada",
 		"Contact_Support_Message": "Wasiliana na Msaada Ujumbe",
 		"If_you_have_question_or_are": "Kama una swali au ni inakabiliwa na masuala na Aimedis, unaweza kutuma kwetu Sopprt Ujumbe na sisi itakuwa nyuma yenu ASAP",
