Languages, given issue - 30-10 by michael

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -617,36 +617,37 @@
 		"Nurse" : "护士",
 		"Pharmacist" : "药剂师",
 		"Professional" : "专业的",
-		"Appointmentiscanceled" : "Appointment is canceled",
-		"DetailsQuestions" :"Details / Questions",
-		"Timezone" : "Timezone",
-		"YesIherewithagreewitha" : "Yes, I herewith agree with a transplantation of one or more organ / tissues of mine after doctors have pronounced me dead",
-		"followingorgantissues:" :"Yes, I allow this except for following organ / tissues:",
-		"Yes, I allowthisonlyforfollowing" : "Yes, I allow this only for following organ / tissues:",
-		"Yes" : "Yes",
-		"No" : "No",
-		"Blood" : "Blood",
-		"Rhesus" : "Rhesus",
-		"TrackersDevices" :"Trackers & Devices",
-		"prescriptions": "Prescriptions",
-		"sickcsrtificates" : "Sick certificates",
-		"ScndOpinion": "Second Opinions",
-		"Contact" :"Contact",
-		"Services" : "Services",
-		"latest_info" : "latest_info",
-		"fors": "for",
-		"Enteremailfirst" : "Enter email first",
-		"Entermessage" : "Enter message",
-		"Invitationsuccessfully" :"Invitation sent successfully",
-		"Inquiries" : "Inquiries",
-		"UploadMust" : "Please upload the file",
-		"Pleaseenterthepatientidfirst" :"Please enter the patient id first",
-		"Successfullyaddedtheinformation" :"Successfully added the information",
-		"PleaseEnterallthefield" : "Please Enter all the field",
-		"Passwordisnotvalid" : "Password is not valid",
-		"PrescriptionisDearchived" : "Prescription is Dearchived",
-		"Prescriptionisdeleted" : "Prescription is deleted",
-		"Prescriptionisarchived" : "Prescription is archived",
-		"Prescriptionishandedtopatient" : "Prescription is handed to patient"
+		"Appointmentiscanceled" : "处方交给病人",
+		"DetailsQuestions" :"详情/问题",
+		"Timezone" : "时区",
+		"YesIherewithagreewitha" : "是的，我在医生宣布我死亡后同意接受我的一个或多个器官/组织的移植",
+		"followingorgantissues:" :"是的，我允许这样做，但以下器官/组织除外：",
+		"Yes, I allowthisonlyforfollowing" : "是的，我只允许以下器官/组织使用：",
+		"Yes" : "是",
+		"No" : "没有",
+		"Blood" : "血液",
+		"Rhesus" : "恒河猴",
+		"TrackersDevices" :"追踪器和设备",
+		"prescriptions": "处方药",
+		"sickcsrtificates" : "病假证明",
+		"ScndOpinion": "第二意见",
+		"Contact" :"联系",
+		"Services" : "服务",
+		"latest_info" : "最新资讯",
+		"fors": "对于",
+		"Enteremailfirst" : "首先输入电子邮件",
+		"Entermessage" : "输入讯息",
+		"Invitationsuccessfully" :"邀请已成功发送",
+		"Inquiries" : "咨询处",
+		"UploadMust" : "请上传文件",
+		"Pleaseenterthepatientidfirst" :"请先输入患者ID",
+		"Successfullyaddedtheinformation" :"成功添加信息",
+		"PleaseEnterallthefield" : "请输入所有字段",
+		"Passwordisnotvalid" : "密码无效",
+		"PrescriptionisDearchived" : "处方已取消存档",
+		"Prescriptionisdeleted" : "处方被删除",
+		"Prescriptionisarchived" : "处方已存档",
+		"Prescriptionishandedtopatient" : "处方交给病人",
+		"Addcompany" :"Add another insurance company"
 	}
 }
