--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -618,36 +618,36 @@
 		"Nurse" : "Enfermeira",
 		"Pharmacist" : "Farmacêutica",
 		"Professional" : "Profissional",
-		"Appointmentiscanceled" : "Appointment is canceled",
-		"DetailsQuestions" :"Details / Questions",
-		"Timezone" : "Timezone",
-		"YesIherewithagreewitha" : "Yes, I herewith agree with a transplantation of one or more organ / tissues of mine after doctors have pronounced me dead",
-		"followingorgantissues:" :"Yes, I allow this except for following organ / tissues:",
-		"Yes, I allowthisonlyforfollowing" : "Yes, I allow this only for following organ / tissues:",
-		"Yes" : "Yes",
-		"No" : "No",
-		"Blood" : "Blood",
+		"Appointmentiscanceled" : "Compromisso cancelado",
+		"DetailsQuestions" :"Detalhes / perguntas",
+		"Timezone" : "Fuso horário",
+		"YesIherewithagreewitha" : "Sim, concordo com o transplante de um ou mais órgãos / tecidos meus depois que os médicos me declararam morto",
+		"followingorgantissues:" :"Sim, eu permito isso, exceto para os seguintes órgãos / tecidos:",
+		"Yes, I allowthisonlyforfollowing" : "Sim, eu permito isso apenas para os seguintes órgãos / tecidos:",
+		"Yes" : "Sim",
+		"No" : "Não",
+		"Blood" : "Sangue",
 		"Rhesus" : "Rhesus",
-		"TrackersDevices" :"Trackers & Devices",
-		"prescriptions": "Prescriptions",
-		"sickcsrtificates" : "Sick certificates",
-		"ScndOpinion": "Second Opinions",
-		"Contact" :"Contact",
-		"Services" : "Services",
-		"latest_info" : "latest_info",
-		"fors": "for",
-		"Enteremailfirst" : "Enter email first",
-		"Entermessage" : "Enter message",
-		"Invitationsuccessfully" :"Invitation sent successfully",
-		"Inquiries" : "Inquiries",
-		"UploadMust" : "Please upload the file",
-		"Pleaseenterthepatientidfirst" :"Please enter the patient id first",
-		"Successfullyaddedtheinformation" :"Successfully added the information",
-		"PleaseEnterallthefield" : "Please Enter all the field",
-		"Passwordisnotvalid" : "Password is not valid",
-		"PrescriptionisDearchived" : "Prescription is Dearchived",
-		"Prescriptionisdeleted" : "Prescription is deleted",
-		"Prescriptionisarchived" : "Prescription is archived",
-		"Prescriptionishandedtopatient" : "Prescription is handed to patient"
+		"TrackersDevices" :"Rastreadores e Dispositivos",
+		"prescriptions": "Prescrições",
+		"sickcsrtificates" : "Certificados de doença",
+		"ScndOpinion": "Segundas opiniões",
+		"Contact" :"Contato",
+		"Services" : "Serviços",
+		"latest_info" : "Informação mais recente",
+		"fors": "para",
+		"Enteremailfirst" : "Insira o e-mail primeiro",
+		"Entermessage" : "Digite a mensagem",
+		"Invitationsuccessfully" :"Convite enviado com sucesso",
+		"Inquiries" : "Inquéritos",
+		"UploadMust" : "Faça upload do arquivo",
+		"Pleaseenterthepatientidfirst" :"Por favor, insira a id do paciente primeiro",
+		"Successfullyaddedtheinformation" :"Adicionada a informação com sucesso",
+		"PleaseEnterallthefield" : "Por favor, digite todos os campos",
+		"Passwordisnotvalid" : "Senha não é válida",
+		"PrescriptionisDearchived" : "A prescrição é pesquisada",
+		"Prescriptionisdeleted" : "A prescrição foi excluída",
+		"Prescriptionisarchived" : "A prescrição está arquivada",
+		"Prescriptionishandedtopatient" : "A receita é entregue ao paciente"
 	}
 }
