--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -627,26 +627,26 @@
 		"No" : "Нет",
 		"Blood" : "Кровь",
 		"Rhesus" : "Резус",
-		"TrackersDevices" :"Trackers & Devices",
-		"prescriptions": "Prescriptions",
-		"sickcsrtificates" : "Sick certificates",
-		"ScndOpinion": "Second Opinions",
-		"Contact" :"Contact",
-		"Services" : "Services",
-		"latest_info" : "latest_info",
-		"fors": "for",
-		"Enteremailfirst" : "Enter email first",
-		"Entermessage" : "Enter message",
-		"Invitationsuccessfully" :"Invitation sent successfully",
-		"Inquiries" : "Inquiries",
-		"UploadMust" : "Please upload the file",
-		"Pleaseenterthepatientidfirst" :"Please enter the patient id first",
-		"Successfullyaddedtheinformation" :"Successfully added the information",
-		"PleaseEnterallthefield" : "Please Enter all the field",
-		"Passwordisnotvalid" : "Password is not valid",
-		"PrescriptionisDearchived" : "Prescription is Dearchived",
-		"Prescriptionisdeleted" : "Prescription is deleted",
-		"Prescriptionisarchived" : "Prescription is archived",
-		"Prescriptionishandedtopatient" : "Prescription is handed to patient"
+		"TrackersDevices" :"Трекеры и устройства",
+		"prescriptions": "Рецепты",
+		"sickcsrtificates" : "Справки о болезни",
+		"ScndOpinion": "Второе мнение",
+		"Contact" :"Связаться с нами",
+		"Services" : "Сервисы",
+		"latest_info" : "Последняя информация",
+		"fors": "за",
+		"Enteremailfirst" : "Сначала введите адрес электронной почты",
+		"Entermessage" : "Введите сообщение",
+		"Invitationsuccessfully" :"Приглашение успешно отправлено",
+		"Inquiries" : "Запросы",
+		"UploadMust" : "Загрузите файл",
+		"Pleaseenterthepatientidfirst" :"Пожалуйста, сначала введите идентификатор пациента",
+		"Successfullyaddedtheinformation" :"Информация добавлена ​​успешно",
+		"PleaseEnterallthefield" : "Пожалуйста, заполните все поля",
+		"Passwordisnotvalid" : "Пароль неверный",
+		"PrescriptionisDearchived" : "Рецепт уважаем",
+		"Prescriptionisdeleted" : "Рецепт удален",
+		"Prescriptionisarchived" : "Рецепт в архиве",
+		"Prescriptionishandedtopatient" : "Рецепт выдается пациенту"
   }
 }
