--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -618,36 +618,36 @@
 		"Nurse" : "Krankenschwester",
 		"Pharmacist" : "Apothekerin",
 		"Professional" : "Fachfrau",
-		"Appointmentiscanceled" : "Appointment is canceled",
-		"DetailsQuestions" :"Details / Questions",
-		"Timezone" : "Timezone",
-		"YesIherewithagreewitha" : "Yes, I herewith agree with a transplantation of one or more organ / tissues of mine after doctors have pronounced me dead",
-		"followingorgantissues:" :"Yes, I allow this except for following organ / tissues:",
-		"Yes, I allowthisonlyforfollowing" : "Yes, I allow this only for following organ / tissues:",
-		"Yes" : "Yes",
-		"No" : "No",
-		"Blood" : "Blood",
+		"Appointmentiscanceled" : "Termin wird abgesagt",
+		"DetailsQuestions" :"Details / Fragen",
+		"Timezone" : "Zeitzone",
+		"YesIherewithagreewitha" : "Ja, ich stimme hiermit einer Transplantation eines oder mehrerer meiner Organe / Gewebe zu, nachdem Ärzte mich für tot erklärt haben",
+		"followingorgantissues:" :"Ja, ich erlaube dies mit Ausnahme der folgenden Organe / Gewebe",
+		"Yes, I allowthisonlyforfollowing" : "Ja, ich erlaube dies nur für folgende Organe / Gewebe:",
+		"Yes" : "Ja",
+		"No" : "Nein",
+		"Blood" : "Blut",
 		"Rhesus" : "Rhesus",
-		"TrackersDevices" :"Trackers & Devices",
-		"prescriptions": "Prescriptions",
-		"sickcsrtificates" : "Sick certificates",
-		"ScndOpinion": "Second Opinions",
-		"Contact" :"Contact",
-		"Services" : "Services",
-		"latest_info" : "latest_info",
-		"fors": "for",
-		"Enteremailfirst" : "Enter email first",
-		"Entermessage" : "Enter message",
-		"Invitationsuccessfully" :"Invitation sent successfully",
-		"Inquiries" : "Inquiries",
-		"UploadMust" : "Please upload the file",
-		"Pleaseenterthepatientidfirst" :"Please enter the patient id first",
-		"Successfullyaddedtheinformation" :"Successfully added the information",
-		"PleaseEnterallthefield" : "Please Enter all the field",
-		"Passwordisnotvalid" : "Password is not valid",
-		"PrescriptionisDearchived" : "Prescription is Dearchived",
-		"Prescriptionisdeleted" : "Prescription is deleted",
-		"Prescriptionisarchived" : "Prescription is archived",
-		"Prescriptionishandedtopatient" : "Prescription is handed to patient"
+		"TrackersDevices" :"Tracker & Geräte",
+		"prescriptions": "Rezepte",
+		"sickcsrtificates" : "Kranke Zertifikate",
+		"ScndOpinion": "Zweite Meinung",
+		"Contact" :"Kontakt",
+		"Services" : "Dienstleistungen",
+		"latest_info" : "Neueste Informationen",
+		"fors": "zum",
+		"Enteremailfirst" : "Geben Sie zuerst die E-Mail-Adresse ein",
+		"Entermessage" : "Nachricht eingeben",
+		"Invitationsuccessfully" :"Einladung erfolgreich gesendet",
+		"Inquiries" : "Anfragen",
+		"UploadMust" : "Bitte laden Sie die Datei hoch",
+		"Pleaseenterthepatientidfirst" :"Bitte geben Sie zuerst die Patienten-ID ein",
+		"Successfullyaddedtheinformation" :"Die Informationen wurden erfolgreich hinzugefügt",
+		"PleaseEnterallthefield" : "Bitte geben Sie alle Felder ein",
+		"Passwordisnotvalid" : "Passwort ist ungültig",
+		"PrescriptionisDearchived" : "Rezept wird gesucht",
+		"Prescriptionisdeleted" : "Rezept wird gelöscht",
+		"Prescriptionisarchived" : "Rezept ist archiviert",
+		"Prescriptionishandedtopatient" : "Das Rezept wird dem Patienten ausgehändigt"
 	}
 }
