Some issues and comet chat

--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -647,6 +647,28 @@
 		"PrescriptionisDearchived" : "Рецепт уважаем",
 		"Prescriptionisdeleted" : "Рецепт удален",
 		"Prescriptionisarchived" : "Рецепт в архиве",
-		"Prescriptionishandedtopatient" : "Рецепт выдается пациенту"
+    "Prescriptionishandedtopatient" : "Рецепт выдается пациенту",
+    "Addcompany" :"Add another insurance company", 
+    "Selectentrytype" : "Select entry type",
+    "addtextentry" : "add text entry",
+		"BodySchemeNotes" :"Body Scheme Notes",
+		"Conditions" : "Condition (How are you?)",
+		"requesteddoctor" : "has requested to become a trusted doctor",
+		"accpetRemove" : "Please check this for accept and remove.",
+		"pain" : "Pain",
+		"Mild" : "Mild", 
+		"Moderate" : "Moderate", 
+		"Servere" : "Severe",
+		"RegisteredSuccessfully" : "Registered Successfully",
+		"Youregisteredsuccessfully" :"You are registered successfully",
+		"emailverification" : "Please check your email for verification",
+		"Allentries" : "All entries are by default visible to professionals you give access to your profile. You can edit these settings additionally on each entry or set a general rule in your",
+		"SelectPainArea" :"Select Pain Area",
+		"Temperature" :"Temperature",
+		"Fieldtitle" :"Field title",
+		"Download" :"Download",
+		"VeiwGraph" :"Veiw Graph",
+		"O2Saturation": "O2 Saturation",
+		"Whereyouarelocated" :"Where you are located"
   }
 }
