--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -648,6 +648,307 @@
 		"PrescriptionisDearchived" : "Rezept wird gesucht",
 		"Prescriptionisdeleted" : "Rezept wird gelöscht",
 		"Prescriptionisarchived" : "Rezept ist archiviert",
-		"Prescriptionishandedtopatient" : "Das Rezept wird dem Patienten ausgehändigt"
+		"Prescriptionishandedtopatient" : "Das Rezept wird dem Patienten ausgehändigt",
+		"Addcompany" :"Add another insurance company", 
+		"Selectentrytype" : "Select entry type",
+
+
+		"timeline" : "Journal",
+        "user" : "Nutzer",
+        "facility" : "Einrichtung",
+        "ICD_11": "ICD-11",
+        "ICD_10_Who": "ICD-10 WHO",
+        "ICD_10_CM":"ICD-10 CM",
+        "ICD_10_GM":"ICD-10 GM",
+		"timeline_filters" : "Journalfilter",
+		"rate_this_course":"Diesen Kurs bewerten",
+		"ok_and_close":"Ok und schließen",
+		"save_and_cont":"Sichern und fortfahren",
+        "clear_filters" : "Filter zurücksetzen",
+        "health_profile" : "Gesundheitsprofil",
+        "add_profile_pic":"Profilbild",
+        "Creatinine":"Kreatinin",
+        "add_data":"+ Daten hinzufügen",
+        "no_document_avl":"Kein Dokument verfügbar",
+		"search_by_type_dr":"Nach Typ, Arzt oder Einrichtung suchen",
+		"search_by_hos":"Suche nach Klinikname oder ID",
+        "search_or_enter":"Suchen oder eingeben",
+        "enter":"Eingeben",
+        "added_by":"Hinzugefügt durch",
+        "images_files":"Bilder & Dateien",
+        "pain_intensity":"Schmerzintensität",
+        "ICD_F32":"ICD: F32.0",
+        "filters":"Filter",
+        "Hba1c": "HbA1c(%)",
+        "warst_p_p":"Schlimmstmöglicher Schmerz",
+        "very_severy":"Sehr schwer",
+        "moderate":"Moderat",
+        "no_pain":"Kein Schmerz",
+		"condition_h_r_u":"Befinden (Wie geht es Ihnen?)",
+		"how_are_you":"Wie geht es Ihnen?",
+		"Enter_Diagnosis" : "Diagnose eingeben",
+		"Problem":"Problem",
+		"select_dates":"Daten wählen",
+        "hurts_a_lot":"Schmerzt sehr",
+        "symp_notes":"Symptome & Anmerkungen",
+        "where_r_u_l":"Wo befinden Sie sich derzeit",
+        "confirm_diag":"Diagnose bestätigen",
+        "travelled_to":"Reise nach",
+        "date_fo_visit":"Datum des Besuchs",
+		"name_of_doc":"Name des Arztes",
+		"add_picture":"+ Bild hinzufügen",
+		"loadingref":"lädt...",
+		"enter_date": "Datum eingeben",
+		"lifelong":"Lebenslang",
+		"change_num":"Chargennummer",
+		"reminder_time": "Erinnerungszeit",
+		"add_another_remin":"eine weitere Erinnerung einrichten",
+		"remove_reminder":"Erinnerung entfernen",
+		"to_be_token":"Einzunehmen bis",
+		"set_a_reminder": "Eine Erinnerung einrichten",
+		"select_date":"Datum wählen",
+		"select_time":"Zeit wählen",
+		"add_attachment":"Anhang einfügen..",
+		"dob_relative":"Geburtsdatum (Verwandter)",
+		"add_dob_relative":"Datum des Todes einfügen (Verwandter)",
+		"hide_or_show": "Zeigen / Verbergen",
+		"set_date":"Datum angeben",
+		"continue":"Fortfahren",
+		"pending_conf":"Ausstehende Bestätigung",
+		"sent_requests":"Gesendete Anfragen",
+		"sent_request":"Gesendete Anfrage",
+		"new_inquiry":"Neue Anfrage",
+		"profile_id_pin":"Profil-ID & PIN",
+		"inquiry_again":"Erneute Anfrage",
+		"graph_bp":"Blutdruckgraph",
+		"graph_bs":"Blutzuckergraph",
+		"graph_hr":"Herzfrequenzgraph",
+		"graph_wb":"Gewichts- und BMI-Graph",
+		"my_docs": "Mein(e) Dokument(e)",
+		"my_drs":"Meine Ärzte",
+		"remove_ftd":"Aus Vertrauensliste entfernen",
+		"dismiss":"Verwerfen",
+		"add_as_trusted":"Als Vertrauens",
+		"add_successfully":"Erfolgreich hinzugefügt",
+		"block_chain":"Blockchain Zugriff",
+		"terms":"AGB",
+		"insurance_comp":"Versicherung",
+		"insurance_num":"Versicherungsnummer",
+		"street_address":"Straße",
+		"privacy_policy":"Datenschutz",
+		"aimedis_online_cour":"Aimedis Onlinekurse",
+		"tracker_self":"Tracker & IoT",
+		"settings": "Einstellungen",
+		"organ_doner":"Organspende",
+		"right_mgnt":"Rechtemanagement",
+		"additional_settings":"Zusätzliche Einstellungen",
+		"blockchain_orgn_doner":"Blockchain gesicherter Organspendeausweis",
+		"serach_pers_sick":"Rezepte und AU finden",
+		"set_default_date_time":"Standarddatums und -zeitformat wählen",
+		"two_fac_auth_enable": "2-Faktor Authentifizierung ist aktiviert",
+		"disable_2_factor":"2-Faktor Authentifizierung deaktivieren",
+		"enable_2_factor":"2-Faktor Authentifizierung aktivieren",
+		"appVersion":"App Version 3.0",
+		"aimedisInc":"Aimedis B.V.",
+		"do_want_disconn":"Möchten Sie die Verbindung unterbrechen",
+		"tracker_data":"Tracker & IoT Daten",
+		"tracker_devices":"Tracker & IoT-Geräte",
+		"connected":"Verbunden",
+		"times": "Zeiten",
+		"last_on":"Zuletzt am",
+		"welcome_back":"Willkommen zurück,",
+		"country_of_insu":"Land der Versicherung",
+		"details_fitbit":"Fitbit Details",
+		"health_status": "Gesundheitsstatus",
+		"contact_other":"Kontaktinformationen",
+		"no_medication":"Keine Medikation",
+		"no_allergies":"Keine Allergien",
+		"no_diagnoses":"Keine Diagnosen",
+		"free_remarks":"Anmerkungen",
+		"relation": "Beziehung",
+		"nurology":"Neurologie",
+		"no_data_yet":"Noch keine Daten",
+		"confirmed":"Bestätigt",
+		"emergency_cont":"Notfallkontakt",
+		"ent_medicat":"internistische Medikation^",
+		"heart_frequency":"Herzfrequenz",
+		"graphs":"Graphen",
+		"consultancy":"Beratung",
+		"online_appo":"Onlinetermin",
+		"cancel_my_app":"Meine Termine stornieren",
+		"cancel_appoint":"Termine stornieren",
+		"calender_view":"Kalenderansicht",
+		"past_appointments":"Vergangene Termine",
+		"select_spec":"Fachrichtung wählen",
+		"appoint_type":"Termintyp (Praxis, Video)",
+		"select_a_specialist":"Bitte einen Spezialisten wählen",
+		"we_are_near":"Wir zeigen Ihnen Spezialisten in Ihrer Nähe",
+		"km_range":"km Umfeld",
+		"certificate": "Zertifikat",
+		"yes":"Ja",
+		"no":"Nein",
+		"cart":"Warenkorb",
+		"pay":"Zahlen",
+		"unable_to_update":"Update nicht möglich",
+		"enter_your_pass":"Bitte geben Sie Ihr Passwort ein",
+		"payment_unsuccess":"Zahlung nicht erfolgreich",
+		"ordered_unsuccess":"Bestellung erfolgreich",
+		"ordered_cant":"Bestellung kann noch nicht ausgeführt werden",
+		"dont_have_acc":"Noch keinen Account?",
+		"type_a_msg":"Geben Sie eine Nachricht ein",
+		"back_to_screen":"Zurück zum Login Bildschirm",
+		"verify_email":"Bitte bestätigen Sie Ihre E-Mail Adresse",
+		"aimedis_link":"Wenn ein Aimedis Account mit dieser",
+		"email_reset":"E-Mail Adresse existiert, senden wir Ihnen Anweisungen, wie Sie das Passwort ändern können.",
+		"we_sent_email":"Wir senden Ihnen eine E-Mail an",
+		"click_the_link":". Klicken Sie auf den Link in der E-Mail, um zu beginnen.",
+		"click_here":"Hier klicken",
+		"unable_open_please":"Öffnen nicht möglich. Bitte manuell öffnen.",
+		"open_default":"Standard E-Mail Client öffnen",
+		"did_nt_get":"Sie haben keine E-Mail Bestätigung erhalten?",
+		"lectures":"Lektionen",
+		"book_v_call":"Videogespräch buchen",
+		"book_o_visit":"Praxistermin buchen",
+		"book_consultancy":"Beratung buchen",
+		"select_time_from":"Zeit auswählen (ab)",
+		"select_time_to":"Zeit auswählen (bis)",
+		"detail_ques":"Anmerkungen",
+		"all":"Alles",
+		"char_8":"8 Zeichen",
+		"lettr_1":"1 Buchstabe",
+		"number_1":"1 Zahl",
+		"spl_char_1":"1 Sonderzeichen",
+		"enter_mob_num":"Mobilfunknummer eingeben",
+		"enter_msg":"Nachricht eingeben",
+		"network_error":"Netzwerkfehler",
+		"forgotten_pass":"Passwort vergessen",
+		"choose_file":"Datei auswählen",
+		"continue_watch":"Weiter ansehen",
+		"start_learning":"Beginne zu lernen",
+		"remove_from_cart":"Aus dem Warenkorb entfernen",
+		"checkout":"Zahlen",
+		"wishlist":"Wunschliste",
+		"excellent":"Hervorragend",
+		"very_good":"Sehr gut",
+		"good":"Gut",
+		"fair":"Ausreichend",
+		"poor":"Schlecht",
+		"audio":"Audio",
+		"blocked_users":"Blockierte Nutzer",
+		"actions":"Aktionen",
+		"sending":"Senden",
+		"unblock":"Entblockieren",
+		"contacts":"Kontakt",
+		"has_file":" hat Ihnen eine Datei gesendet. Hier herunterladen: ",
+		"you_deleted":"Sie haben diese Nachricht gelöscht",
+		"incoming_call":"Eingehender Anruf",
+		"outgoing_call":"Ausgehender Anruf",
+		"ok":"OK",
+		"english":"Englisch",
+		"german":"Deutsch",
+		"swahili":"Swahili",
+		"your_rating":"Ihre Beurteilung",
+		"leave_rating":"Bitte hinterlassen Sie eine Bewertung",
+		"error_in_license":"Fehler bei Lizenzupload",
+		"call_by":"Anruf durch",
+		"call_initiated":"Anruf begonnen",
+		"call_ongoing":"Anruf anhaltend",
+		"call_unanswered":"Unbeantworteter Anruf",
+		"call_rejected":"Anruf abgelehnt",
+		"call_busy":"Anruf besetzt",
+		"call_cancelled":"Anruf abgebrochen",
+		"call_ended":"Anruf beendet",
+		"cant_chat":"kann jetzt nicht chatten",
+		"heck_it_later":"ich überprüfe es später",
+		"unable_retrive":"Gesprächsrekonstruktion nicht möglich ",
+		"you_just_sent":"Sie haben gerade gesendet ",
+		"you_recieve":"Sie erhalten ",
+		"call_is":"Der Anruf ist",
+		"document":"Dokument",
+		"image":"Bild",
+		"etc":"etc.",
+		"values":"Werte",
+		"added_in_cart":"Zum Warenkorb hinzugefügt",
+		"already_in_cart":"Kurs ist bereits im Warenkorb",
+		"click_here_upload":"Hier klicken um Ihre Lizenz hochzuladen",
+		"not_now":"Nicht jetzt",
+		"reset_passwrd":"Passwort wiederherstellen",
+		"register_new_acc":"Neuen Account registrieren",
+		"you_r_blocked":"Ihr Account ist blockiert. Bitte kontaktieren Sie den Aimedis Admin via contact@aimedis.com",
+		"blocked":"Blockiert",
+		"turn_on":"Aktivieren",
+		"login_suceess":"Erfolgreich eingeloggt",
+		"select_acc_type":"Wählen Sie einen Accounttyp",
+		"i_m_a":"Ich bin",
+		"update_entry":"Eintrag updaten",
+		"notifications":"Hinweise",
+		"something_wrong":"Etwas ist schiefgegangen",
+		"added_to_plist":"Zur Patientenliste hinzufügen",
+		"please_select_rating":"Bitte Bewertung wählen",
+		"cancel_s_o":"Zweitmeinung stornieren",
+		"enter_your_name":"Geben Sie Ihren Namen ein",
+		"error_in_p_u":"Fehler bei Profilupdate",
+		"enter_your_email":"Bitte geben Sie Ihre E-Mail Adresse ein",
+		"your_app_calender":"Ihr Termin in der Kalenderansicht",
+		"no_time_slot":"Kein Terminslot an diesem Termin verfügbar",
+		"going_offline":"Buchungen etc.",
+		"you_will_get":"Sie werden über wichtige Ereignisse informiert z.B. ",
+		"by_clicking":"Durch das Erstellen eines Accounts, akzeptiere ich die",
+		"term_of_use":" AGB",
+		"two_days_ago":"vor 2 Tagen",
+		"three_to_6_days_ago":"vor 3 bis 6 Tagen",
+		"updated_track":"Upgedateter Eintrag",
+		"added_success":"Erfolgreich hinzugefügt...",
+		"sick_cert_found":"AU Daten gefunden",
+		"sick_cert_not_found":"AU Daten nicht gefunden",
+		"pre_data_found":"eRezept Daten gefunden",
+		"error_getting_token":"Fehler bei Tokenfetch",
+		"error_in_track":"Fehler",
+		"pre_data_not_found":"eRezept Daten nicht gefunden",
+		"sick_doc_found":"AU Arztdaten gefunden",
+		"sick_doc_not_found":"AU Arztrdaten nicht gefunden",
+		"pre_doc_found":"eRezept Arztdaten gefunden",
+		"pre_doc_not_found":"eRezept Arztdaten nicht gefunden",
+		"error_network_conn":"Netzwerkfehler",
+		"select_aimedis_dr":"Bitte Aimedis Arzt auswählen",
+		"Dr_added_to_fav_list":"Arzt zu Vertrauensliste hinzugefügt",
+		"please_check_net_conn":"Bitte Netzwerk überprüfen",
+		"rating_added_to_course":"Bewertung zu Kurs hinzugefügt",
+		"remove_to_wish":"Kurs von der Wunschliste entfernt",
+		"added_to_wish":"Zu Wunschliste hinzugefügt",
+		"remove_in_wishlist":"Kurs von der Wunschliste entfernt",
+		"two_step_verification":"Bitte den 2-Faktor Authentifierungscode eingeben",
+		"verification_code":"2-Faktor Authentifierungscode",
+		"unavailable_2":"2-Faktor Authentifierungscode nicht verfügbar?",
+		"Remarks":"Anmerkungen",
+		"remove_second_op":"Zweitmeinung entfernen",
+		"not_an_organ":"Kein Organspender",
+		"family_dr_added":"Hausarzt hinzugefügt",
+		"plz_selct_pdf":"Bitte nur Pdf, Jpg und Png Dateitypen wählen",
+		"agree_on":"Bitte unseren AGB und Datenschutzbestimmungen zustimmen",
+		"all_required":"Alle Felder benötigt",
+		"password_up":"Passwort geändert",
+		"select_lang":"Sprache wählen",
+		"exit_amedis":"Verlassen",
+		"want_to_exit":"Möchten Sie sich abmelden?",
+		"fcm_msg_arr":"Eine neue FCM Nachricht erhalten",
+		"upload_a_photo":"Bitte ein Foto Ihrer Krankenversichertenkarte hochladen",
+		"im_medical_prof":"und ich bestätige, dass ich eine medizinische Fachkraft bin. Ich muss meine Lizenz vorlegen, die ich jetzt oder im Verlauf vorlege. Bevor ich diesen Beweis nicht erbracht habe, kann ich mich nicht mit Patienten verbinden.",
+		"reset_pass":"Geben Sie die E-Mail-Adresse ein, mit der Sie sich registriert haben, und wir senden Ihnen einen Link zum Zurücksetzen Ihres Passworts.",
+		"specific_comments":"Wenn Sie spezielle Kommentare zum Kurs haben, teilen Sie uns dies bitte mit, indem Sie das Formular ausfüllen.",
+		"decided_by_following":"Über JA oder NEIN soll dann folgende Person entscheiden:",
+		"not_allowed":"Nein, ICH WIDERSPRECHE einer Entnahme von Organen oder Geweben",
+		"exclude_some":"JA, ich erlaube dies außer für folgende Organe / Gewebe:",
+		"include_some":"JA, ich erlaube dies nur für folgende Organe / Gewebe:",
+		"yes_to_all":"JA, ich stimme hiermit einer Transplantation eines oder mehrerer meiner Organe / Gewebe zu, nachdem Ärzte mich für tot erklärt haben",
+		"first_last_hos":"Erster und letzter Tag des Klinikaufenthaltes",
+		"archive_entry_q":"Möchten Sie diese Eingabe wirklich archivieren?",
+		"remove_this":"Möchten Sie dies wirklich entfernen?",
+		"cancel_this":"Möchten Sie dies wirklich abbrechen?",
+		"are_u_sure":"Möchten Sie diese Anfragen wirklich ändern?",
+		"update_inquery":"Anfrage ändern",
+		"dearchive_entry_q":"Möchten Sie diesen Eintrag wirklich dearchivieren?",
+		"delete_for_msg":"Möchten Sie diesen Eintrag wirklich löschen? Dies kann im Nachhinein nicht rückgängig gemacht werden.",
+		"make_personilized_acc":"Fügen Sie Ihr Profilfoto hinzu, um Ihr Konto persönlicher zu gestalten. Es ist nur für Sie und die Personen in Ihrer Vertrauensliste sichtbar."
 	}
 }
